# feroxagent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml  check.yml  release.yml
shell_completions/: _feroxbuster  _feroxbuster.ps1  feroxbuster.bash  feroxbuster.elv  feroxbuster.fish
src/: lib.rs  logger.rs  main.rs  parser.rs  utils.rs
src/banner/: container.rs
src/config/: container.rs  tests.rs  utils.rs
src/nlp/: model.rs
src/scan_manager/: tests.rs
src/smart_wordlist/: analyzer.rs  auth_discovery.rs  generator.rs  llm.rs  mod.rs  mutations.rs  probe.rs  report.rs
src/sync/: dynamic_semaphore.rs
