[package]
name = "feroxagent"
version = "0.1.0"
authors = ["Kyle Ryan"]
license = "MIT"
edition = "2021"
description = "AI-powered content discovery tool using LLM-generated wordlists from recon data."
categories = ["command-line-utilities"]
keywords = [
    "pentest",
    "enumeration",
    "ai",
    "content-discovery",
    "web",
    "llm",
]
exclude = [".github/*", "check-coverage.sh"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
scraper = "0.19"
futures = "0.3"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["socks", "native-tls-alpn", "json"] }
# uses feature unification to add 'serde' to reqwest::Url
url = { version = "2.5", features = ["serde"] }
serde_regex = "1.1"
clap = { version = "4.5", features = ["wrap_help", "cargo"] }
lazy_static = "1.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
indicatif = { version = "0.17.11" }
console = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
dirs = "5.0"
regex = "1.11"
crossterm = "0.27"
rlimit = "0.10"
ctrlc = "3.4"
anyhow = "1.0"
dotenvy = "0.15"
leaky-bucket = "1.1"
gaoya = "0.2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.20"
httpmock = "0.7"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
